Le build de jar avec maven FONCTIONE!